# Ci-teamwork-project-March-2024

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: workflow.yml
lib/buffer/: buffer.h
script/: data.json  generate.py  header.py  signals.py  test.py  text.py
